--- a/intro to programming/stage1/celesteweb.html
+++ b/intro to programming/stage1/celesteweb.html
@@ -5,14 +5,14 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
- 	<div class="name"> 
+ 	<div id="name"> 
 		<h1> Celeste Duncan </h1>
 	</div>
 
-	<div class="bio"> 
+	<div id="bio"> 
 		<div class="image"><img src="feet.jpg" alt="error"></div>
 	
-		<div class="me"><p><em>Welcome to my page, I'm <b>Celeste</b>. I first started dabbling with programming 	
+		<div class="me"><p><em>Welcome to my page, I'm <strong>Celeste</strong>. I first started dabbling with programming 	
 			when myspace first came out. I don't really remember my age, but I do remember I was in seventh grade. It wasn't anything to crazy, I would just view the source code of layouts that I found on the internet,and make a few adjustments to the things that I didn't like. A year and a half ago, I taught myself the basics of HTML & CSS. I knew I
 			wanted a career that had something to do with programming. Coincidentally, a friend
 			told me about Udacity's programs.</em>
@@ -20,36 +20,36 @@
 		</p> </div>
 	</div>
 
- <div class="interests">
+ <div id="interests">
 
-	<div class="mus">
+	<div class="bar">
 		<h2> Music I Enjoy </h2>
 	</div>
 
-	<div class="show"> 
+	<div class="bar"> 
 			<h3> Shows I Like </h3>
 		</div>
 
  </div>
 
- <div class="info">
+ <div id="info">
 
-	<div class="link">
+	<div class="content">
 			<br><a href="https://www.youtube.com/watch?v=-V2GH4cJgKA"> Blood Orange: I'm Sorry We Lied </a>
 			<br><a href="https://www.youtube.com/watch?v=gzDTMEo-g2k"> Blood Orange: Chosen </a>
 			<br><a href="https://www.youtube.com/watch?v=U2b-mWkcBig"> Andre Nickatina: Conversation With a Devil </a>
 			<br><a href="https://www.youtube.com/watch?v=QRfTS8bd05o"> Common: I Want You </a>
 		</div>
 
-	<div class="list">
-		<br> 1: Always Sunny in Phildelphia
-		<br> 2: Parks and Recs
-		<br> 3: East Bound and Down
-		<br> 4: Samurai Champloo 
-		<br> 5: Fairy Tail
+	<div class="content">
+	 	<ol>
+			<li>Always Sunny in Philadelphia </li>
+			<li>Parks and Recs </li>
+			<li>East Bound and Down </li>
+			<li>Samurai Champloo </li>
+			<li>Fairy Tail </li>
 	</div>
  
  </div>
-
 </body>
 </html>
