--- a/intro to programming/stage1/celesteweb.html
+++ b/intro to programming/stage1/celesteweb.html
@@ -10,14 +10,17 @@
 	</div>
 
 	<div id="bio"> 
-		<div class="image"><img src="feet.jpg" alt="error"></div>
+		
+		<div class="image"><img src="feet.jpg" alt="error">
+		</div>
 	
-		<div class="me"><p><em>Welcome to my page, I'm <strong>Celeste</strong>. I first started dabbling with programming 	
+		<div class="me">
+			<p><em>Welcome to my page, I'm <strong>Celeste</strong>. I first started dabbling with programming 	
 			when myspace first came out. I don't really remember my age, but I do remember I was in seventh grade. It wasn't anything to crazy, I would just view the source code of layouts that I found on the internet,and make a few adjustments to the things that I didn't like. A year and a half ago, I taught myself the basics of HTML & CSS. I knew I
 			wanted a career that had something to do with programming. Coincidentally, a friend
-			told me about Udacity's programs.</em>
+			told me about Udacity's programs.</em></p>
 		
-		</p> </div>
+		</div>
 	</div>
 
  <div id="interests">
@@ -27,8 +30,9 @@
 	</div>
 
 	<div class="bar"> 
-			<h3> Shows I Like </h3>
-		</div>
+		<h3> Shows I Like </h3>
+	</div>
+
  </div>
 
  <div id="info">
@@ -38,7 +42,7 @@
 			<br><a href="https://www.youtube.com/watch?v=gzDTMEo-g2k"> Blood Orange: Chosen </a>
 			<br><a href="https://www.youtube.com/watch?v=U2b-mWkcBig"> Andre Nickatina: Conversation With a Devil </a>
 			<br><a href="https://www.youtube.com/watch?v=QRfTS8bd05o"> Common: I Want You </a>
-		</div>
+	</div>
 
 	<div class="content">
 	 	<ol>
@@ -47,6 +51,7 @@
 			<li>East Bound and Down </li>
 			<li>Samurai Champloo </li>
 			<li>Fairy Tail </li>
+		</ol>
 	</div>
  
  </div>
